--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.eslintrc.json
+.idea/$CACHE_FILE$
+.idea/.gitignore
+.idea/eslint-app.iml
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+package-lock.json
